attached project links to imgs

--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -11,14 +11,15 @@
      <div class="col-md-4">
       <div class="inner-card">
         <div class="card-item">
-          <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="">
+          <a href="https://floating-ocean-14783.herokuapp.com/users">
+            <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="">
+          </a>
             <div class="card-body">
               <div class="project-title">
                 <h3>WellBee 
 
                  <a href="https://github.com/khmelka/WellBee"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
                   
-                 <a href="https://floating-ocean-14783.herokuapp.com/users"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>
 
                 </h3>
               </div>
@@ -40,13 +41,14 @@
      <div class="col-md-4">
       <div class="inner-card">
         <div class="card-item">
-          <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="">
+          <a href="https://master.d33t5402rji87e.amplifyapp.com/"> 
+            <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="">
+          </a>
             <div class="card-body">
               <div class="project-title">
                 <h3>HorrorMovies 
                   <a href="https://github.com/khmelka/HorrorMovieFrontend"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
-                  
-                  <a href="https://master.d33t5402rji87e.amplifyapp.com/"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>                </h3>
+                </h3>
               </div>              
               <div class='card-text'>
                 <img src='../../../assets/images/icons/Javascript.png' id="smallIcons" title="Javascript"/>
@@ -65,14 +67,13 @@
     <div class="col-md-4">
       <div class="inner-card">
         <div class="card-item">
-          <img class ="card-image-top" src="../../../assets/images/snowbuddy.png" id="">
+          <a href="https://master.d2ukukz7ipiflm.amplifyapp.com">
+            <img class ="card-image-top"  src="../../../assets/images/snowbuddy.png" id="" >
+          </a>
             <div class="card-body">
               <div class="project-title">
                 <h3>SnowBuddy 
                   <a href="https://github.com/khmelka/snowBuddy-frontend"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
-                  
-                  <a href="https://master.d2ukukz7ipiflm.amplifyapp.com"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>
-               
                 </h3>
               </div>
                 <div class='card-text'>
