added titles for imgs

--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -12,7 +12,7 @@
       <div class="inner-card">
         <div class="card-item">
           <a href="https://floating-ocean-14783.herokuapp.com/users">
-            <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="">
+            <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="" title="Demo">
           </a>
             <div class="card-body">
               <div class="project-title">
@@ -42,7 +42,7 @@
       <div class="inner-card">
         <div class="card-item">
           <a href="https://master.d33t5402rji87e.amplifyapp.com/"> 
-            <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="">
+            <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="" title="Demo">
           </a>
             <div class="card-body">
               <div class="project-title">
@@ -68,7 +68,7 @@
       <div class="inner-card">
         <div class="card-item">
           <a href="https://master.d2ukukz7ipiflm.amplifyapp.com">
-            <img class ="card-image-top"  src="../../../assets/images/snowbuddy.png" id="" >
+            <img class ="card-image-top"  src="../../../assets/images/snowbuddy.png" id="" title="Demo" >
           </a>
             <div class="card-body">
               <div class="project-title">
