added skills and updated resume

--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -19,6 +19,7 @@
                           <img src='../../../assets/images/icons/expressjs-icon.png' id="skillsIcons" title="Express"/>
                           <img src='../../../assets/images/icons/mongodb-icon.png' id="skillsIcons" title="MongoDB" [ngStyle]="{'margin-left': '-40px'}"/>
                           <img src='../../../assets/images/icons/aws.png' id="skillsIcons" title="AWS"[ngStyle]="{'zoom': '1.4', 'margin-left': '-40px'}"/>
+                          <img src='../../../assets/images/icons/c++.png' id="skillsIcons" title="AWS"[ngStyle]="{'zoom': '1.1', 'margin-left': '-40px'}"/>
                          </div>
                       </div>
         
