--- a/src/app/profile/navbar/navbar.component.html
+++ b/src/app/profile/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         
         </div>
 
-        <p class="myName" >Nelly Khmeleva</p>
+        <p class="myName" >Nel K.</p>
           <p class="myTitle">Software Engineer</p>
       <div class="test">
       <ul >
