--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -11,23 +11,18 @@
                     <div class="about-card">
                       
                       <div class="about-item">
-                        Before discovering my passion for programming, I enjoyed science and medicine. 
-                        Graduating from University of Colorado Denver with the Bachelor’s degree in Biology, 
-                        I worked as a laboratory research assistant and, later, as a medical interpreter thinking 
-                        I would eventually continue medical education. 
+
                         <div>
                           <img src="../../../assets/images/cat.jpg" alt="" id="cat"/>
-                        </div>  
-                        As great as it was, something was missing… 
-                        That something was the fast pace, problem solving and unlimited learning opportunities that 
-                        I discovered in programming.
+                        </div>
                         
-                        Having spent some time learning on my own, 
-                        I enrolled into Flatiron School's Software Engineering Immersive program. 
+                        I am passionate about software engineering and finding creative solutions to solve complex problems. 
                         
-                        The program was incredibly intensive and really pushed every cell in my brain! 
-                        Now I have strong skills in React, JavaScript, and Ruby on Rails. Since graduation, 
-                        I’ve been pushing myself every single day by learning and exploring new technologies. 
+                        After several years as a clinical researcher and a medical interpreter, 
+
+                        I have found myself drawn to the world of programming, its fast pace and unlimited learning opportunities. 
+                        Trained in Ruby, Rails, JavaScript, React, and AWS.
+                         
                         To build this portfolio, I used Angular and Bootstrap for styling.
 
                         </div>
